# ChangeLog for media-video/alevt
# Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-video/alevt/ChangeLog,v 1.26 2006/07/15 21:26:42 tove Exp $

  15 Jul 2006; Torsten Veller <tove@gentoo.org> alevt-1.6.1-r4.ebuild:
  Stable on x86 (#138022)

  09 Jul 2006; Diego Pettenò <flameeyes@gentoo.org> alevt-1.6.1-r1.ebuild,
  alevt-1.6.1-r3.ebuild, alevt-1.6.1-r4.ebuild:
  Pinpoint virtual/x11 version to less than 7.

*alevt-1.6.1-r4 (26 Jun 2006)

  26 Jun 2006; Diego Pettenò <flameeyes@gentoo.org>
  +files/alevt-1.6.1-vbi.patch, +alevt-1.6.1-r4.ebuild:
  Add patch to fix vbi decoding with kernels 2.6.16 and greater. Thanks to Sir
  Pingus in bug #135942.

  19 Mar 2006; Diego Pettenò <flameeyes@gentoo.org> alevt-1.6.1-r1.ebuild:
  Backport modular x dependencies on stable ebuild.

  19 Mar 2006; Diego Pettenò <flameeyes@gentoo.org>
  -files/alevt-1.6.0-gentoo.diff, +files/alevt-1.6.1-respectflags.patch,
  alevt-1.6.1-r3.ebuild:
  Respect LDFLAGS, add -fno-strict-aliasing, remove stale file.

  15 Jan 2006; Diego Pettenò <flameeyes@gentoo.org> -files/alevt.desktop,
  -files/xio_timer.patch, -alevt-1.6.1-r2.ebuild:
  Drop old version and orphan files.

  24 Dec 2005; Diego Pettenò <flameeyes@gentoo.org> metadata.xml:
  Move to media-tv that's more suited, I'll take care of it anyway.

  20 Dec 2005; Patrick Kursawe <phosphan@gentoo.org> metadata.xml:
  Can't maintain it properly. Video herd must do it.

*alevt-1.6.1-r3 (20 Dec 2005)

  20 Dec 2005; Patrick Kursawe <phosphan@gentoo.org> +alevt-1.6.1-r3.ebuild:
  Several improvements to the ebuild, see bug #116159

*alevt-1.6.1-r2 (08 Dec 2005)

  08 Dec 2005; Patrick Kursawe <phosphan@gentoo.org>
  +files/alevt-1.6.1-v4l2.patch, -alevt-1.6.0-r3.ebuild,
  -alevt-1.6.1.ebuild, +alevt-1.6.1-r2.ebuild:
  Adding v4l2patch from ivtv (http://ivtvdriver.org, 0.5.1, misc/alevt.diff)
  because of bug #114651. Cleaning up old versions.
