@@ -1,6 +1,6 @@
-# Copyright 1999-2006 Gentoo Foundation
+# Copyright 1999-2007 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/media-video/alevt/alevt-1.6.1-r3.ebuild,v 1.3 2006/07/09 20:14:49 flameeyes Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-video/alevt/alevt-1.6.1-r3.ebuild,v 1.4 2007/07/22 08:59:12 dberkholz Exp $
 
 inherit eutils toolchain-funcs flag-o-matic
 
@@ -15,11 +15,11 @@ LICENSE="GPL-2"
 SLOT="0"
 KEYWORDS="~amd64 ~ppc ~sparc ~x86"
 
-RDEPEND="|| ( x11-libs/libX11 <virtual/x11-7 )
+RDEPEND="x11-libs/libX11
 	>=media-libs/libpng-1.0.12"
 
 DEPEND="${RDEPEND}
-	|| ( x11-proto/xproto <virtual/x11-7 )"
+	x11-proto/xproto"
 
 src_unpack() {
 	unpack ${A}
