@@ -1,6 +1,10 @@
 # ChangeLog for media-video/alevt
-# Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-video/alevt/ChangeLog,v 1.26 2006/07/15 21:26:42 tove Exp $
+# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/media-video/alevt/ChangeLog,v 1.27 2007/07/22 08:59:12 dberkholz Exp $
+
+  22 Jul 2007; Donnie Berkholz <dberkholz@gentoo.org>;
+  alevt-1.6.1-r1.ebuild, alevt-1.6.1-r3.ebuild, alevt-1.6.1-r4.ebuild:
+  Drop virtual/x11 references.
 
   15 Jul 2006; Torsten Veller <tove@gentoo.org> alevt-1.6.1-r4.ebuild:
   Stable on x86 (#138022)
